--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-functions.js"></script>
 
 	<script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-analytics.js"></script>
 
